/ fixed navbar overflowing die to expanding social links

--- a/src/app/shell/header/header.component.scss
+++ b/src/app/shell/header/header.component.scss
@@ -30,6 +30,7 @@
 
 nav {
     width: 100%;
+    height: calc(76px - (2 * 18px));
 
     padding: 18px 0;
 
@@ -112,6 +113,9 @@ nav {
     list-style: none;
     display: block;
     text-align: right;
+
+    width: 45px;
+    float: right;
 
     a i {
         font-size: 18px;
